--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteCond %{HTTPS} off
-RewriteRule (.*) https://%{HTTP_HOST}/%{REQUEST_URI} [R,L]
+RewriteRule (.*) https://%{HTTP_HOST}/%{REQUEST_URI} [R=301,L]
 
 RewriteRule ^(.*/[^./]+)$ $1/ [R=301,L]
 
