--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,11 @@
 RewriteCond %{HTTPS} off
 RewriteRule (.*) https://%{HTTP_HOST}/%{REQUEST_URI} [R=301,L]
 
-RewriteRule ^(.*/[^./]+)$ $1/ [R=301,L]
+RewriteCond %{REQUEST_URI} !/$
+RewriteCond %{REQUEST_URI} !\.[^/\.]+$
+RewriteRule .* %{REQUEST_URI}/ [R=301,L]
+
+RewriteRule ^hdd/aic/(.*)$ /$1 [R=301]
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
